 + With help of dual curly potato noodles (and others)
 + GetWidth is also optimised
 + This also fixes rare crash with autoWrap
1.5.2.1
- Fixed ArgumentOutOfRangeException with OpLabel.OnChange
- Added 10 line count limit to normal OpLabel to prevent Futile crash
1.5.3.0
- Added OpUpdown as a new provided UIconfig
 + Textbox with arrows, specialized for accepting a large range of number.
###1.5.1: No longer Beta#!#20210207#!#
- Changed access keywords of many properties and methods
 + Methods that shouldn't be called by the modders are now internal instead of public
 + UIconfig._value is now protected internal instead of private
- Item sorting now ignores initial articles like 'The'
 + Use ListItem.GetRealName(string) if you need this too
- Canvas gets coloured with active OpTab.colorCanvas
1.5.1.1
- Fixed OpComboBox not hiding its lblText
1.5.1.2
- OpComboBox now has allowEmpty property which forces the user to choose one option if this is false
- Fixed OpComboBox not getting disabled with greyedOut
1.5.1.4
- Hopefully fixed Mod List button showing up twice
- Renamed Tab names for Mod List to avoid cluttering
###1.5: Blepping Board Update#!#20210104#!#
- Received many bits of help from Garrakx and Slime_Cubed for this update. Thank you!
- Supports BepInEx plugins (BaseUnityPlugin)
 + BepInEx Plugin can either use LoadOI(BaseUnityPlugin) for custom OptionInterface, or BepInEx.Configuration for GeneratedOI
 + GeneratedOI can also be used for default profiled OI, for when the modder wants to use other features (e.g. Translate) of OptionInterface
- Users can copy text from Clipboard to UIconfig that's held and vice versa
- OpScrollBox no longer scrolls with mousewheel if the cursor is over any UIconfig
- Rewritten saved config format from encrypted txt to json so it can be viewed and changed outside the game
- Added several new provided UIelements
 + OpHoldButton: Circular Hold Button which can also be used as ProgressButton