@@ -10,6 +10,7 @@
 1.5.3.0
 - Added OpUpdown as a new provided UIconfig
  + Textbox with arrows, specialized for accepting a large range of number.
+- OpTextBox.Accept is now readonly and only can be set in its constructor.
 ###1.5.1: No longer Beta#!#20210207#!#
 - Changed access keywords of many properties and methods
  + Methods that shouldn't be called by the modders are now internal instead of public
